# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.32.7
	Martin Väth <martin at mvath.de>:
	- internal: provide and use eix::array instead of hacks

*eix-0.32.6
	Martin Väth <martin at mvath.de>:
	- Fix compilation with C++98 (regression from eix-0.32.5), see
	  https://github.com/vaeth/eix/issues/35
	- Make default values of MATCH_FIELD_LICENSE and MATCH_FIELD_EAPI
	  identical to MATCH_FIELD_CATEGORY_NAME so that they never match and
	  are de facto disabled. This hopefully avoids user confusion without
	  breaking user configs. https://bugs.gentoo.org/show_bug.cgi?id=610424
	- Let default value of MATCH_ALGORITH_EXACT be less aggressive

*eix-0.32.5
	Martin Väth <martin at mvath.de>:
	- Fix completion with >=zsh-5.3
	- Find first valid substring for some algorithms when matching package
	  paths, see https://bugs.gentoo.org/show_bug.cgi?id=605978
	- Modify heuristics for default choice of match algorithm
	- Treat category/package:slot/subslot[::repo] as valid for --pipe
	  Previously, words with more than one / had been tacitly ignored
	- Fix duplicate detection with overlays for parsing cache methods
	- Add configure option for treatment of const virtuals
	- xml output: use shortcuts like <description/>. Omit some quoting
	- eix-header: Update help text for recommended functions.sh usage
	- internal: Use eix::format throughout for output
	- internal: Use C++11 if available: delete copy constructors, override
	- internal: Use constexpr for const arrays; gcc might otherwise produce
	  unexpected copies: https://forums.gentoo.org/viewtopic-t-1057674.html
	- internal: Finally implement ExplodeAtom in a sane manner
	- internal: Use array class if available (might require C++11)
	- internal: forward_list instead of list if available (C++11)
	- internal: Use reserve() (when it presumably really optimizes)
	- internal: Introduce generic ptr_container
	- internal: Use vector instead of list when presumably more efficient